# models/Review.js
@@ -3,6 +3,7 @@ import mongoose from "mongoose";
 const reviewsSchema = new mongoose.Schema({
   idUser: { type: String, required: true },
   idVendor: { type: String, required: true },
+  descricao: { type: String, required: true },
   rate: { type: Number, required: true },
 });
 
